manifests/petclinic-app/petclinic-app-ingress.yaml
# https://cloud.google.com/kubernetes-engine/docs/how-to/load-balance-ingress?hl=ko
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-app-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: petclinic-app-rollout-bluegreen-active
                port:
                  number: 80
